[gd_scene load_steps=34 format=2]

[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char1/Char1_4_sides_16px.png" type="Texture" id=1]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char6/Char6_4_sides_16px.png" type="Texture" id=2]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char5/Char5_4_sides_16px.png" type="Texture" id=3]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char2/Char2_4_sides_16px.png" type="Texture" id=4]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char4/Char4_4_sides_16px.png" type="Texture" id=5]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char3/Char3_4_sides_16px.png" type="Texture" id=6]
[ext_resource path="res://CharacterSelect.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.486275, 0.470588, 0.470588, 1 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Player0",
"speed": 2.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Player1",
"speed": 2.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Player2",
"speed": 2.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Player3",
"speed": 2.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Player4",
"speed": 2.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Player5",
"speed": 2.0
} ]

[node name="CharacterSelect" type="Node2D"]
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_right = 344.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSelect" type="AnimatedSprite" parent="."]
position = Vector2( 168, 72 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "Player0"
frame = 2
playing = true

[node name="Left" type="Button" parent="."]
margin_left = 80.0
margin_top = 64.0
margin_right = 116.0
margin_bottom = 84.0
text = "Left"

[node name="Right" type="Button" parent="."]
margin_left = 216.0
margin_top = 64.0
margin_right = 260.0
margin_bottom = 84.0
text = "Right"

[node name="Des" type="Label" parent="."]
margin_left = 128.0
margin_top = 88.0
margin_right = 195.0
margin_bottom = 119.0
text = "Gender:
Hair Color:"

[node name="Select" type="Button" parent="."]
margin_left = 136.0
margin_top = 152.0
margin_right = 187.0
margin_bottom = 172.0
text = "Select"

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
